# HiGHS

./: CMakeLists.txt
cmake/: cpp-highs.cmake
cpp_ms/: CMakeLists.txt  ms_solve.cpp  ms_solve.h
highs/mip/: HighsMipSolverData.cpp  HighsPrimalHeuristics.cpp  HighsPrimalHeuristics.h
